# new-python-project

./: Makefile  README.md  pyproject.toml  sample.toml  tox.ini
.github/workflows/: ci.yml
new_python_project/: __init__.py  __main__.py
new_python_project/template/: Makefile  README.nancy.md  description.in.py  email.in.py  project_executable.in.py  project_home_page.in.py  project_module.in.py  project_name.in.py  pyproject.nancy.toml  tox.nancy.ini  year.in.py
new_python_project/template/$run(project_module.in.py)/: __init__.nancy.py  __main__.nancy.py
new_python_project/template/$run(project_module.in.py)/subcommand/: __init__.nancy.py  demo.py
new_python_project/template/$run(project_slug.in.py)/: __main__.nancy.py
new_python_project/template/.github/workflows/: ci.nancy.yml  release.nancy.yml
new_python_project/template/tests/: test_$run(project_module.in.py).nancy.py  testutils.nancy.py
new_python_project/template/tests/test-files/: greeting-goodbye-expected.nancy.txt
python_project_template/: __init__.py  __main__.py
python_project_template/template/: project_slug.in.py
python_project_template/template/$run(project_slug.in.py)/: __init__.nancy.py
python_project_template/template/.github/workflows/: ci.nancy.yml
template/: README.nancy.md  author.in.py  description.in.py  email.in.py  project_name.in.py  project_slug.in.py  pyproject.nancy.toml  tox.nancy.ini  year.in.py
template/$include(project_slug.in.py)/: __init__.nancy.py  __main__.nancy.py
template/$include{project_slug.in.py}/: __init__.nancy.py  __main__.nancy.py
template/$run(project_slug.in.py)/: __init__.nancy.py  __main__.nancy.py  warnings_util.py
template/.github/workflows/: ci.nancy.yml
template/tests/: test_$run(project_slug.in.py).py  testutils.nancy.py
tests/: test_new_python_project.py  testutils.py
tests/test-files/: foo.toml  greeting-goodbye-expected.txt
