[project]
name = "python-project-template"
version = "0.1"
description = "Create a Python project from a simple template"
license = "GPL-3.0-or-later"
authors = [
    {name = "Reuben Thomas", email = "rrt@sc3d.org"}
]
readme = "README.md"
urls = {Homepage = "https://github.com/rrthomas/python_project_template"}
requires-python = ">= 3.11"
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
]

[project.scripts]
python_project_template = "python_project_template:main"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = [
    "setuptools >= 62.3.0",
]

[tool.setuptools]
packages = [
    "python_project_template",
]

[tool.ruff.lint]
select = ["D", "E", "F", "I", "UP"]
ignore = ["D1", "D401", "D415", "E501"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"
